--- a/CinemaBook/Scence/Manager/Management/MangamentProduct/OrderProduct/view/OrderProductViewController.xib
+++ b/CinemaBook/Scence/Manager/Management/MangamentProduct/OrderProduct/view/OrderProductViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OrderProductViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="btn_edit" destination="Ljk-aE-cie" id="Nph-Wg-zFt"/>
                 <outlet property="collectionView" destination="PW4-Ya-pqL" id="Kma-dA-5Qz"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -23,7 +24,7 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="PW4-Ya-pqL">
-                            <rect key="frame" x="10" y="0.0" width="394" height="818"/>
+                            <rect key="frame" x="10" y="0.0" width="394" height="758"/>
                             <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aUi-tu-el4">
                                 <size key="itemSize" width="128" height="128"/>
@@ -32,13 +33,51 @@
                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                             </collectionViewFlowLayout>
                         </collectionView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LbO-5u-uuI">
+                            <rect key="frame" x="0.0" y="758" width="414" height="60"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ljk-aE-cie">
+                                    <rect key="frame" x="20" y="10" width="374" height="40"/>
+                                    <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                    <state key="normal" title="TẠO MÓN COMBO">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="10"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                            <real key="value" value="1"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                            <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="btn_makeToCreateProductViewController:" destination="-1" eventType="touchUpInside" id="a7e-Va-w8t"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="Ljk-aE-cie" secondAttribute="bottom" constant="10" id="1zL-SM-cP6"/>
+                                <constraint firstItem="Ljk-aE-cie" firstAttribute="top" secondItem="LbO-5u-uuI" secondAttribute="top" constant="10" id="BTE-AH-ZjL"/>
+                                <constraint firstAttribute="height" constant="60" id="SlV-rM-Dv3"/>
+                                <constraint firstAttribute="trailing" secondItem="Ljk-aE-cie" secondAttribute="trailing" constant="20" id="hYB-er-u6K"/>
+                                <constraint firstItem="Ljk-aE-cie" firstAttribute="leading" secondItem="LbO-5u-uuI" secondAttribute="leading" constant="20" id="n7o-Fr-C25"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
+                        <constraint firstAttribute="bottom" secondItem="LbO-5u-uuI" secondAttribute="bottom" id="35K-aa-oGP"/>
                         <constraint firstAttribute="trailing" secondItem="PW4-Ya-pqL" secondAttribute="trailing" constant="10" id="HeK-zZ-KyE"/>
                         <constraint firstItem="PW4-Ya-pqL" firstAttribute="top" secondItem="qTL-9D-utc" secondAttribute="top" id="aHH-5U-AAn"/>
+                        <constraint firstAttribute="trailing" secondItem="LbO-5u-uuI" secondAttribute="trailing" id="b5H-O9-1lu"/>
+                        <constraint firstItem="LbO-5u-uuI" firstAttribute="top" secondItem="PW4-Ya-pqL" secondAttribute="bottom" id="eXU-1h-Trk"/>
                         <constraint firstItem="PW4-Ya-pqL" firstAttribute="leading" secondItem="qTL-9D-utc" secondAttribute="leading" constant="10" id="mSw-Jw-1ZC"/>
-                        <constraint firstAttribute="bottom" secondItem="PW4-Ya-pqL" secondAttribute="bottom" id="tgY-nf-FTR"/>
+                        <constraint firstItem="LbO-5u-uuI" firstAttribute="leading" secondItem="qTL-9D-utc" secondAttribute="leading" id="r7V-rU-3bF"/>
                     </constraints>
                 </view>
             </subviews>
@@ -50,7 +89,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="qTL-9D-utc" secondAttribute="bottom" id="bLL-bc-hsc"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="132" y="110"/>
+            <point key="canvasLocation" x="131.8840579710145" y="109.82142857142857"/>
         </view>
     </objects>
 </document>
