--- a/CinemaBook/Scence/Booking/BookingProductCombo/view/cell/ItemProductComboTableViewCell.xib
+++ b/CinemaBook/Scence/Booking/BookingProductCombo/view/cell/ItemProductComboTableViewCell.xib
@@ -53,6 +53,9 @@
                                 <real key="value" value="1"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="btn_incease:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="AK3-RJ-ScH"/>
+                        </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ERv-sv-0eh">
                         <rect key="frame" x="164" y="69" width="20" height="20"/>
@@ -72,6 +75,9 @@
                                 <real key="value" value="1"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="btn_includenumber:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="FmC-xg-c9x"/>
+                        </connections>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Bi-bh-tAf">
                         <rect key="frame" x="0.0" y="99" width="320" height="1"/>
@@ -138,12 +144,13 @@
                     <constraint firstItem="vs8-0D-29c" firstAttribute="top" secondItem="IT7-8m-6v1" secondAttribute="bottom" constant="8" id="smB-Y5-Jhv"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="image_combo" destination="cST-p9-sub" id="5aS-M7-Rcj"/>
                 <outlet property="lbl_desscription" destination="IT7-8m-6v1" id="EB3-bU-fCX"/>
                 <outlet property="lbl_name" destination="ABD-lq-dvQ" id="kWy-yi-I0F"/>
+                <outlet property="lbl_number" destination="Ogy-da-A5n" id="VCs-d2-0Sh"/>
                 <outlet property="lbl_price" destination="cL0-jJ-IXW" id="8Yw-jg-ptO"/>
             </connections>
             <point key="canvasLocation" x="131.8840579710145" y="109.82142857142857"/>
